add short dependency and run instructions