@@ -1,2 +1,5 @@
 # Gilberts-Adventueres
 Gilberts Adventüres
+
+This project requires JavaFX and the org.json library.
+Run with arguments --module-path "%JAVAFX_HOME" --add-modules javafx.controls,javafx.fxml
